--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode_3D.BP_GameMode_3D_C
+EditorStartupMap=/Game/Maps/Map_main_2-5.Map_main_2-5
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
